--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -13,7 +13,6 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://emrahpaste.tk<%=req.originalUrl%>" />
     <meta property="og:image" content="https://emrahpaste.tk/emrahpaste.png" />
-    <link rel="stylesheet" href="/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link
       rel="stylesheet"
@@ -21,6 +20,8 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.1.0/styles/monokai-sublime.min.css">
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <%- include('./partials/navbar.ejs') %>
