--- a/views/layouts/partials/navbar.ejs
+++ b/views/layouts/partials/navbar.ejs
@@ -1,4 +1,4 @@
 <div class="topnav">
-    <a href="/">EmrahPaste </a> | <a href="/contact"> Contact</a>
+    <a href="/">EmrahPaste </a> | <a href="/contact"> Contact</a> | <a href="/api"> Api</a>
 </div>
 <br>
