--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<form class="form-group" action="/paste/new" method="POST">
+<form class="form-group text-center" action="/paste/new" method="POST">
   <textarea
     name="content"
     class="form-control"
